feat(section): article + img

--- a/package.json
+++ b/package.json
@@ -17,11 +17,10 @@
     "gulp-autoprefixer": "^8.0.0",
     "gulp-concat": "^2.6.1",
     "gulp-ejs": "^5.1.0",
-    "gulp-uglifycss": "^1.1.0",
+    "gulp-image": "^6.2.1",
     "gulp-sass": "^5.0.0",
     "gulp-sourcemaps": "^3.0.0",
+    "gulp-uglifycss": "^1.1.0",
     "sass": "^1.43.4"
-  },
-  "dependencies": {
   }
 }
