--- a/package.json
+++ b/package.json
@@ -4,23 +4,30 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "watch": "npx gulp watch",
     "makeHtml": "npx gulp makeHtml",
-    "makeCss": "npx gulp makeCss"
+    "makeCss": "npx gulp makeCss",
+    "minifyScripts": "npx gulp minifyScripts",
+    "optimizeImg": "npx gulp optimizeImg",
+    "watcher": "npx gulp watcher"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "autoprefixer": "^10.4.0",
     "browser-sync": "^2.27.7",
+    "cssnano": "^5.0.10",
     "gulp": "^4.0.2",
-    "gulp-autoprefixer": "^8.0.0",
     "gulp-concat": "^2.6.1",
     "gulp-ejs": "^5.1.0",
     "gulp-image": "^6.2.1",
+    "gulp-postcss": "^9.0.1",
     "gulp-sass": "^5.0.0",
     "gulp-sourcemaps": "^3.0.0",
+    "gulp-terser": "^2.1.0",
     "gulp-uglifycss": "^1.1.0",
+    "gulp-watch": "^5.0.1",
     "sass": "^1.43.4"
   }
+ 
 }
