--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "makeHtml": "npx gulp makeHtml",
+    "makePhotographerHtml": "npx gulp makePhotographerHtml",
     "makeCss": "npx gulp makeCss",
+    "makePhotographerCss": "npx gulp makePhotographerCss",
     "minifyScripts": "npx gulp minifyScripts",
     "optimizeImg": "npx gulp optimizeImg",
     "watcher": "npx gulp watcher"
