feat(widget): Création du widget de triage

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "makeCss": "npx gulp makeCss",
     "makePhotographerCss": "npx gulp makePhotographerCss",
     "minifyScripts": "npx gulp minifyScripts",
+    "minifyPhotographerScripts": "npx gulp minifyPhotographerScripts",
     "optimizeImg": "npx gulp optimizeImg",
     "watcher": "npx gulp watcher"
   },
