--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "makeCss": "npx gulp makeCss",
     "buildJs": "npx gulp buildJs",
     "optimizeImg": "npx gulp optimizeImg",
+    "optimizeVideo": "npx gulp optimizeVideo",
     "watcher": "npx gulp watcher"
   },
   "keywords": [],
@@ -30,6 +31,7 @@
     "gulp-uglifycss": "^1.1.0",
     "gulp-watch": "^5.0.1",
     "sass": "^1.43.4",
+    "way2enjoy-gulp": "^1.0.1",
     "webpack": "^5.64.4",
     "webpack-cli": "^4.9.1"
   }
