--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "buildJs": "npx gulp buildJs",
     "optimizeImg": "npx gulp optimizeImg",
     "optimizeVideo": "npx gulp optimizeVideo",
-    "watcher": "npx gulp watcher",
-    "doc": "jsdoc -c jsdoc.json"
+    "watcher": "npx gulp watcher"
   },
   "keywords": [],
   "author": "",
@@ -35,9 +34,5 @@
     "way2enjoy-gulp": "^1.0.1",
     "webpack": "^5.64.4",
     "webpack-cli": "^4.9.1"
-  },
-  "dependencies": {
-    "jsdoc": "^3.6.7",
-    "jsdoc-cli": "^1.0.1"
   }
 }
